@@ -365,6 +365,7 @@ Included
 - Compare CLI smoke coverage now pins staged-finalize replacement behavior (stale pre-existing output roots are replaced and `.stage` residue is absent after successful finalize).
 - Compare now fails closed when `--out` equals or overlaps either input root (`COMPARE_OUT_CONFLICTS_INPUT`), including parent/child overlap, to prevent destructive output-finalize collisions.
 - `host install` / `host update` now fail closed when `hostRoot` overlaps `releaseDir` (`HOST_ROOT_OVERLAPS_RELEASE_DIR`), preventing self-apply path collisions while still emitting a deterministic host update receipt.
+- `examine`, `intake`, `run`, and `safe-run` now fail closed when `--out` overlaps dependency inputs such as `--policy` or `--script` (`*_OUT_CONFLICTS_POLICY`, `*_OUT_CONFLICTS_SCRIPT`), preventing staged-finalize cleanup from deleting command dependencies.
 - `safe-run`, `run`, and `examine` now fail closed when `--out` equals or overlaps the input path (`*_OUT_CONFLICTS_INPUT`), preventing staged-finalize cleanup from deleting or replacing the source input.
 - `email unpack` and `email safe-run` now also fail closed when `--out` equals or overlaps the input path, preventing staged-finalize cleanup from deleting or replacing source email inputs or normalized email exports.
 - `intake` now also fails closed when `--out` equals or overlaps the input path (`INTAKE_OUT_CONFLICTS_INPUT`), preventing staged-finalize cleanup from deleting or replacing the source input.
